# N64Soul

./: .gitignore  AGENTS.md  Makefile  Makefile.n64  PLAN.md  README.md  TODO.md  build.sh  codex.md
.githooks/: pre-commit
docs/: DESIGN.md  STATUS.md  emulator.md  index.html  setup.md  styles.css
include/: config.h
n64_ai_project/: Makefile  linker.ld
n64llm/: exportmodel.py  tune.py  validate_weights.py
n64llm/n64-rust/: Cargo.toml  Makefile  build.rs  mips-nintendo64-none.json  n64.ld
n64llm/n64-rust/.cargo/: config.toml
n64llm/n64-rust/src/: config.rs  config.toml  display.rs  inference_engine.rs  ipl3.rs  keyboard.rs  lib.rs  main.rs  manifest.rs  memory_manager.rs  model_weights.rs  n64_math.rs  n64_sys.rs  tokenizer.rs  weights.rs  weights_manifest.rs  weights_manifest_find.rs
n64llm/n64-rust/src/diag/: decode_once.rs  emu_smoke.rs  manifest_check.rs  mod.rs  rom_probe.rs  stream_bench.rs  stream_crc.rs  weights_info.rs
n64llm/n64-rust/src/infer/: decoder.rs  embedding.rs  mod.rs
n64llm/n64-rust/src/io/: dbuf.rs  mod.rs  rom_reader.rs
n64llm/n64-rust/src/model/: config.rs  dims.rs  infer_dims.rs  meta.rs  mod.rs  names.rs  stream.rs
n64llm/n64-rust/src/platform/: cart.rs  host_cart.rs  mod.rs  pi.rs  time.rs
n64llm/n64-rust/src/stream/: mod.rs  prefetch.rs  streamer.rs
n64llm/n64-rust/src/util/: adler32.rs  crc32.rs  f32le.rs  mod.rs
n64llm/n64-rust/tests/: host_sanity.rs
scripts/: emu_smoke.sh  export_and_test.sh  export_smoke_and_clean.sh
src/: main.c  neural_net.c  neural_net.h  pong.c  pong.h  render.c  render.h  save.c  save.h  (+4 more)
(+22 files in other folders)
