[package]
name = "n64_gpt"
version = "0.1.0"
edition = "2021"
description = "A no_std Nintendo 64 GPT project."
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"

# Custom rustflags to use our linker script (n64.ld) and enable the required floating-point features.
rustflags = [
    "-C", "link-arg=-Tn64.ld",
    "-C", "target-feature=+float,+soft-float",
]

# For no_std environments you typically don't need any default features.
[features]
default = []
embed_assets = []
host = []

[profile.dev]
panic = "abort"
opt-level = 0

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
heapless = { version = "0.7", default-features = false }

[[bin]]
name = "n64_gpt"
path = "src/main.rs"
